search center button

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,6 +11,13 @@
     left: 100px;
 }
 
+#researchDiv {
+    position: absolute;
+    top: 10px;
+    z-index: 1000;
+    left: 450px;
+}
+
 #searchDiv input {
     width: 300px;
 }
